# Huffman-Compression-Utility

./: .gitignore  CMakeLists.txt  README.md
output/: codes.txt
src/: main.cpp
src/lib/: HuffmanCoding.cpp
src/lib/include/: HuffmanCoding.h
